--- a/_config.yml
+++ b/_config.yml
@@ -18,56 +18,49 @@
 # Be sure to edit the values below
 ##########################################################################################
 
-title: Agency Name
-email:  contact@example.gov
+title: ulm.dev
+email:  hallo@ulm.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  Agency Name (EAC) Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  Aenean et sapien a leo auctor scelerisque quis nec magna. Sed dictum ante a risus vehicula facilisis.
+  ulm.dev: build things, create stuff inside the city of ulm.
 baseurl: "" # the subpath of your site, e.g. /blog
 # url: "https://example.gov" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Twitter handle. Only the handle, not the URL.
-twitter: 18F
+twitter: stadtulm
 
 # Configuration for Google Analytics, add your UA code here:
-google_analytics_ua: UA-????????-??
+google_analytics_ua: ''
 
 # Configuration for DAP, add your agency ID here:
-dap_agency: GSA
+dap_agency: ''
 
 # Site Navigation
 primary_navigation:
   - name: Home
     url: /
+  - name: Projekte
+    children:
+      - name: OpenBike
+        url: /projects/openbike/
+      - name: digitransit
+        url: /projects/digitransit/
   - name: Blog
     url: /blog/
-  - name: Document
-    url: /document/
-  - name: Document with sidenav
-    url: /document-with-sidenav/
-  - name: Document submenu
-    children:
-      - name: Navigation link
-        url: '#main-content'
-      - name: Navigation link
-        url: '#main-content'
-      - name: Navigation link
-        url: '#main-content'
 
-secondary_navigation:
-  - name: Secondary link
-    url: '#main-content'
-  - name: Another secondary link
-    url: '#main-content'
+#secondary_navigation:
+#  - name: Secondary link
+#    url: '#main-content'
+#  - name: Another secondary link
+#    url: '#main-content'
 
 # Search.gov configuration
 #
 # 1. Create an account with Search.gov https://search.usa.gov/signup
 # 2. Add a new site.
 # 3. Add your site/affiliate name here.
-searchgov:
-  affiliate: federalist
-  inline: false
+#searchgov:
+#  affiliate: federalist
+#  inline: false
 
 ##########################################################################################
 # The values below here are more advanced and should only be
@@ -79,6 +72,8 @@ collections:
   pages:
     output: true
     permalink: /:path/
+  projects:
+    output: true
 
 permalink: pretty
 
