--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ulm.dev" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Twitter handle. Only the handle, not the URL.
-twitter: stadtulm
+twitter: ulm_donau
 
 # Configuration for Google Analytics, add your UA code here:
 google_analytics_ua: ''
