--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,3 +23,5 @@ jobs:
         keep_history: true
         build_dir: _site
         jekyll: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
